--- a/xprof/Makefile.am
+++ b/xprof/Makefile.am
@@ -1,5 +1,5 @@
 bin_SCRIPTS = iprof 
 
-iprof:
+iprof: $(top_builddir)/utils/xprof.sh.erb
 	$(ERB) -T 1 languages=["opencl","ze"] $(top_builddir)/utils/xprof.sh.erb  > $@
 	chmod a+x $@
