Ensure configure is triggered on xprof.sh.erb.in modification.

--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -1,5 +1,5 @@
 noinst_HEADERS = lttng/tracepoint.h utarray.h uthash.h utlist.h
-nodist_noinst_HEADERS = lttng/tracepoint_gen.h xprof_utils.h
+nodist_noinst_HEADERS = lttng/tracepoint_gen.h xprof_utils.h xprof.sh.erb
 
 lttng/tracepoint_gen.h: $(srcdir)/tracepoint_gen.rb
 	mkdir -p lttng
