--- a/utils/Makefile.am
+++ b/utils/Makefile.am
@@ -1,12 +1,9 @@
 noinst_HEADERS = lttng/tracepoint.h utarray.h uthash.h utlist.h
-nodist_noinst_HEADERS = lttng/tracepoint_gen.h xprof_utils.h xprof.sh.erb
+nodist_noinst_HEADERS = lttng/tracepoint_gen.h xprof.sh.erb
 
 lttng/tracepoint_gen.h: $(srcdir)/tracepoint_gen.rb
 	mkdir -p lttng
 	$(RUBY) $(srcdir)/tracepoint_gen.rb 25 > lttng/tracepoint_gen.h
 
-xprof_utils.h: $(srcdir)/xprof_utils.h.erb
-	$(ERB) $(srcdir)/xprof_utils.h.erb > xprof_utils.h
-
-CLEANFILES = lttng/tracepoint_gen.h xprof_utils.h
+CLEANFILES = lttng/tracepoint_gen.h
 EXTRA_DIST = LTTng.rb tracepoint_gen.rb yaml_ast.rb xprof_utils.h.erb
