--- a/opencl/Makefile.am
+++ b/opencl/Makefile.am
@@ -117,16 +117,14 @@ clinterval_callbacks.cpp: $(srcdir)/clinterval_callbacks.cpp.erb $(srcdir)/gen_c
 nodist_libCLProf_la_SOURCES = \
 	clinterval_callbacks.cpp \
 	clinterval_dispatchers.c \
-	clinterval_callbacks.h  \
 	tracer_opencl.h
 	
 libCLProf_la_SOURCES = \
 	clprof.c \
 	clinterval.h \
 	clinterval.c \
-	clinterval_helpers.h \
-	clinterval_callbacks_state.h
-
+	clinterval_callbacks.hpp
+	
 libCLProf_la_CPPFLAGS = -I$(top_srcdir)/utils -I$(srcdir)/include -I./
 libCLProf_la_CFLAGS = -Wall -Wextra -Wno-unused-parameter -Werror $(BABELTRACE2_CFLAGS)
 libCLProf_la_CXXFLAGS = -std=c++17 -Wall -Wextra -Wno-unused-parameter -Werror $(BABELTRACE2_CFLAGS)
