--- a/utils/xprof.sh.erb.in
+++ b/utils/xprof.sh.erb.in
@@ -147,7 +147,14 @@ summary() {
     done
 
     if [[ "$timeline" ]]; then
-        babeltrace2 --plugin-path=$libdir --component=filter.clprof.interval --component=sink.xprof.timeline ${lttng_last_session}
+<% if languages.include?("opencl") %>
+    echo "Generating ${lttng_last_session}/timeline_cl.json"
+    babeltrace2 --plugin-path=$libdir --component=filter.clprof.interval --component=sink.xprof.timeline ${lttng_last_session} > ${lttng_last_session}/timeline_cl.json
+<% end %>
+<% if languages.include?("ze") %>
+    echo "Generating ${lttng_last_session}/timeline_ze.json"
+    babeltrace2 --plugin-path=$libdir --component=filter.zeprof.interval --component=sink.xprof.timeline ${lttng_last_session} > ${lttng_last_session}/timeline_ze.json
+<% end %>
     fi
 
     if [[ "$trace" ]] ; then
@@ -162,14 +169,14 @@ summary() {
     
     if [[ -z "$timeline" ]] ; then
 <% if languages.include?("opencl") %>
-    ocl_output=$(babeltrace2 --plugin-path=$libdir --component=filter.clprof.interval --component=sink.xprof.tally  --params="display=$display" ${lttng_last_session})
+    ocl_output=$(babeltrace2 --plugin-path=$libdir --component=filter.clprof.interval --component=sink.xprof.tally --params="display=$display" ${lttng_last_session})
     if [ -n "$ocl_output" ]; then
         echo "== OpenCL == "
         echo "$ocl_output"
     fi
 <% end %>
 <% if languages.include?("ze") %>
-    ze_output=$(babeltrace2 --plugin-path=$libdir --component=sink.zeprof.dispatch  --params="display=$display" ${lttng_last_session})
+    ze_output=$(babeltrace2 --plugin-path=$libdir --component=filter.zeprof.interval --component=sink.xprof.tally --params="display=$display" ${lttng_last_session})
     if [ -n "$ze_output" ]; then
         echo "== Level0 == "
         echo "$ze_output"
