--- a/opencl/tests/profiling_normal.yaml
+++ b/opencl/tests/profiling_normal.yaml
@@ -1,5 +1,6 @@
 ---
 :hostname: aurora12.gov
+:default_stream: stream0
 :stream_classes:
 - :name: cl_stream_class
   :schemas:
@@ -18,15 +19,11 @@
     vtid: 2
 :events:
 - :name: lttng_ust_opencl:clEnqueueReadBuffer_entry
-  :stream: stream0
 - :name: lttng_ust_opencl_profiling:event_profiling
-  :stream: stream0
   :payload:
     event: 12
 - :name: lttng_ust_opencl:clEnqueueReadBuffer_exit
-  :stream: stream0
 - :name: lttng_ust_opencl_profiling:event_profiling_results
-  :stream: stream0
   :payload:
     event: 12
     start: 0
